--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="notifyTitle">MQTT Message Received</string>
     <string name="notifyTitle_connectionLost">MQTT Client Has Lost Connection</string>
     <string name="btnSubscribe">Subscribe</string>
+    <string name="btnPublish">Publish</string>
 </resources>
